# Open2Badge

./: .gitignore  CDC.md  README.en.md  README.md  TEST.md  exemple.badges.openbadgepassport.v2.txt  flush.sh  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  api.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_user_is_place_admin.py
core/models/: __init__.py  badge.py  endorsement.py  user.py
core/templatetags/: dict_filters.py  string_filters.py
core/tests/: test_api.py  test_endorsement.py  test_models.py  test_template_filters.py  test_views.py
core/utils/: crypto.py
docs/en/: api.md  index.md  technical.md  usage.md
docs/fr/: api.md  index.md  technique.md  utilisation.md
fixtures/: badges.json  issuer_memberships.json  users.json
templates/: base.html
templates/admin/issuer/: change_form.html  generate_keys.html
templates/core/: home.html  login.html
templates/core/auth/: login.html  profile.html
templates/core/auth/partials/: endorsement_badges.html  issuers.html
templates/core/badge/: detail.html  endorsement_list.html  list.html  public_list.html
templates/core/badge/partials/: alignment_form.html  alignments_list.html  badge_card.html  badge_form.html  badge_list.html  navbar_badges.html
templates/core/email/: verify_email.html  verify_email.txt
templates/core/endorsement/partials/: endorsement_form.html  (+2 more)
templates/core/issuer/: confirm_delete.html  form.html  list.html  public_list.html
templates/partials/: footer.html  head.html  login_modal.html  nav.html  user_menu.html
(+4 files in other folders)
